objects/Account.object
<CustomObject>
    <fields>
        <fullName>sf42_de_Phone_2__c</fullName>
        <inlineHelpText>Please enter the telephone number in the following format:
Country code-prefix-number-extension
Example: +49-89-99616-0</inlineHelpText>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sf42_de_Reason_for_Visit__c</fullName>
        <label>Reason for Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_SAP_Customer_Number__c</fullName>
        <label>SAP Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Salutation__c</fullName>
        <label>Salutation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Type_from_Lead__c</fullName>
        <description>This field is to help create workaround for transferring Type from Lead to Account.
As direct mapping to Account.Type is not possible it is mapped to this field.
Then Workflow rules are doing Field Update on Type field.</description>
        <label>Type (from Lead)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Press</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>PT-AG Agent</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_ZIP_PO_BOX__c</fullName>
        <label>ZIP (for PO Box)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_type_of_shipment__c</fullName>
        <label>Type of Shipment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post über Adresse</fullName>
                </value>
                <value>
                    <fullName>Post über Postfach</fullName>
                </value>
                <value>
                    <fullName>Post über Großkunde</fullName>
                </value>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Use_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Written statement by the client stating that we can use his name in marketing and sales documents</description>
        <inlineHelpText>Written statement by the client stating that we can use his name in marketing and sales documents</inlineHelpText>
        <label>Use as Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Account_Name_jp__c</fullName>
        <label>Account Name Local</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Account_Number__c</fullName>
        <displayFormat>A# {000000}</displayFormat>
        <label>Auto Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Account_Read__c</fullName>
        <label>JP Account how to read</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Account_Section_en__c</fullName>
        <label>JP Account Section</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Account_Section_jp__c</fullName>
        <label>JP Account Section JP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Capital__c</fullName>
        <label>JP Capital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Conditions_Shipment__c</fullName>
        <label>JP Conditions of Shipment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Conditions_of_Payment__c</fullName>
        <label>JP Conditions of Payment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Material__c</fullName>
        <label>JP Material</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminium</fullName>
                </value>
                <value>
                    <fullName>Brass</fullName>
                </value>
                <value>
                    <fullName>Cooper</fullName>
                </value>
                <value>
                    <fullName>stainless steel - ferretic</fullName>
                </value>
                <value>
                    <fullName>stainless steel - non-ferretic</fullName>
                </value>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Product_Type__c</fullName>
        <label>JP Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tube</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Forming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Production_Mode__c</fullName>
        <label>JP Production Mode</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>welded</fullName>
                </value>
                <value>
                    <fullName>seamless</fullName>
                </value>
                <value>
                    <fullName>brazed</fullName>
                </value>
                <value>
                    <fullName>drawn</fullName>
                </value>
                <value>
                    <fullName>peeled</fullName>
                </value>
                <value>
                    <fullName>polished</fullName>
                </value>
                <value>
                    <fullName>black</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Town_en__c</fullName>
        <label>City EN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Additional_Products__c</fullName>
        <label>SG Additional Products</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Date_2__c</fullName>
        <label>SG Calibration Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Date_3__c</fullName>
        <label>SG Calibration Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Date_4__c</fullName>
        <label>SG Calibration Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Date__c</fullName>
        <label>SG Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Due_Date_2__c</fullName>
        <label>SG Calibration Due Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Due_Date_3__c</fullName>
        <label>SG Calibration Due Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Due_Date_4__c</fullName>
        <label>SG Calibration Due Date 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Calibration_Due_Date__c</fullName>
        <label>SG Calibration Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Date_of_Purchase_2__c</fullName>
        <label>SG Date of Purchase 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Date_of_Purchase_3__c</fullName>
        <label>SG Date of Purchase 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Date_of_Purchase_4__c</fullName>
        <label>SG Date of Purchase 4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Date_of_Purchase__c</fullName>
        <label>SG Date of Purchase</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_2__c</fullName>
        <label>SG Product 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALIGNEO Ex</fullName>
                </value>
                <value>
                    <fullName>ALIGNEO Standard</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT REPORTER</fullName>
                </value>
                <value>
                    <fullName>BORALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Advanced</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Expert</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Standard</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1-6</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1x</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 4x</fullName>
                </value>
                <value>
                    <fullName>HYDRALIGN</fullName>
                </value>
                <value>
                    <fullName>i Learn Vibration [Professional]</fullName>
                </value>
                <value>
                    <fullName>INCLINEO</fullName>
                </value>
                <value>
                    <fullName>Industrial Accelerometers – VIB 6.1xx</fullName>
                </value>
                <value>
                    <fullName>Laser trigger sensor</fullName>
                </value>
                <value>
                    <fullName>LEAVLIGN Ultra</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>Mini Accelerometers - VIB 6.20x</fullName>
                </value>
                <value>
                    <fullName>OMNITREND</fullName>
                </value>
                <value>
                    <fullName>OMNITREND web</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Standard</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Standard</fullName>
                </value>
                <value>
                    <fullName>PERMALIGN</fullName>
                </value>
                <value>
                    <fullName>PULLALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro Ex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_3__c</fullName>
        <label>SG Product 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALIGNEO Ex</fullName>
                </value>
                <value>
                    <fullName>ALIGNEO Standard</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT REPORTER</fullName>
                </value>
                <value>
                    <fullName>BORALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Advanced</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Expert</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Standard</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1-6</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1x</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 4x</fullName>
                </value>
                <value>
                    <fullName>HYDRALIGN</fullName>
                </value>
                <value>
                    <fullName>i Learn Vibration [Professional]</fullName>
                </value>
                <value>
                    <fullName>INCLINEO</fullName>
                </value>
                <value>
                    <fullName>Industrial Accelerometers – VIB 6.1xx</fullName>
                </value>
                <value>
                    <fullName>Laser trigger sensor</fullName>
                </value>
                <value>
                    <fullName>LEAVLIGN Ultra</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>Mini Accelerometers - VIB 6.20x</fullName>
                </value>
                <value>
                    <fullName>OMNITREND</fullName>
                </value>
                <value>
                    <fullName>OMNITREND web</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Standard</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Standard</fullName>
                </value>
                <value>
                    <fullName>PERMALIGN</fullName>
                </value>
                <value>
                    <fullName>PULLALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro Ex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_4__c</fullName>
        <label>SG Product 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALIGNEO Ex</fullName>
                </value>
                <value>
                    <fullName>ALIGNEO Standard</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT REPORTER</fullName>
                </value>
                <value>
                    <fullName>BORALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Advanced</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Expert</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Standard</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1-6</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1x</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 4x</fullName>
                </value>
                <value>
                    <fullName>HYDRALIGN</fullName>
                </value>
                <value>
                    <fullName>i Learn Vibration [Professional]</fullName>
                </value>
                <value>
                    <fullName>INCLINEO</fullName>
                </value>
                <value>
                    <fullName>Industrial Accelerometers – VIB 6.1xx</fullName>
                </value>
                <value>
                    <fullName>Laser trigger sensor</fullName>
                </value>
                <value>
                    <fullName>LEAVLIGN Ultra</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>Mini Accelerometers - VIB 6.20x</fullName>
                </value>
                <value>
                    <fullName>OMNITREND</fullName>
                </value>
                <value>
                    <fullName>OMNITREND web</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Standard</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Standard</fullName>
                </value>
                <value>
                    <fullName>PERMALIGN</fullName>
                </value>
                <value>
                    <fullName>PULLALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro Ex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Details_2__c</fullName>
        <label>SG Product Details 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Details_3__c</fullName>
        <label>SG Product Details 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Details_4__c</fullName>
        <label>SG Product Details 4</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Details__c</fullName>
        <label>SG Product Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Interest_2__c</fullName>
        <label>SG Product Interest 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>ALI Rental</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CM Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Interest_3__c</fullName>
        <label>SG Product Interest 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>ALI Rental</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CM Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Interest_4__c</fullName>
        <label>SG Product Interest 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>ALI Rental</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CM Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product_Interest__c</fullName>
        <label>SG Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALI</fullName>
                </value>
                <value>
                    <fullName>ALI Rental</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>CM Rental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Product__c</fullName>
        <label>SG Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALIGNEO Ex</fullName>
                </value>
                <value>
                    <fullName>ALIGNEO Standard</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALIGNMENT REPORTER</fullName>
                </value>
                <value>
                    <fullName>BORALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Advanced</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Expert</fullName>
                </value>
                <value>
                    <fullName>CENTRALIGN Ultra Standard</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1-6</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 1x</fullName>
                </value>
                <value>
                    <fullName>EDDYTHERM 4x</fullName>
                </value>
                <value>
                    <fullName>HYDRALIGN</fullName>
                </value>
                <value>
                    <fullName>i Learn Vibration [Professional]</fullName>
                </value>
                <value>
                    <fullName>INCLINEO</fullName>
                </value>
                <value>
                    <fullName>Industrial Accelerometers – VIB 6.1xx</fullName>
                </value>
                <value>
                    <fullName>Laser trigger sensor</fullName>
                </value>
                <value>
                    <fullName>LEAVLIGN Ultra</fullName>
                </value>
                <value>
                    <fullName>LEVALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>Mini Accelerometers - VIB 6.20x</fullName>
                </value>
                <value>
                    <fullName>OMNITREND</fullName>
                </value>
                <value>
                    <fullName>OMNITREND web</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Plus Standard</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Ex</fullName>
                </value>
                <value>
                    <fullName>OPTALIGN Smart Standard</fullName>
                </value>
                <value>
                    <fullName>PERMALIGN</fullName>
                </value>
                <value>
                    <fullName>PULLALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro</fullName>
                </value>
                <value>
                    <fullName>ROTALIGN Pro Ex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Service_Personnel__c</fullName>
        <label>SG Service Personnel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arun Nair</fullName>
                </value>
                <value>
                    <fullName>Chatchawarn Thongwuttisak</fullName>
                </value>
                <value>
                    <fullName>Cris Lai</fullName>
                </value>
                <value>
                    <fullName>Dave Lee</fullName>
                </value>
                <value>
                    <fullName>Davis Tan</fullName>
                </value>
                <value>
                    <fullName>Dede Panetta</fullName>
                </value>
                <value>
                    <fullName>Eason Chong</fullName>
                </value>
                <value>
                    <fullName>Edward Kuantan</fullName>
                </value>
                <value>
                    <fullName>Jakarin Imbumroong</fullName>
                </value>
                <value>
                    <fullName>Jason Soh</fullName>
                </value>
                <value>
                    <fullName>K.C Low</fullName>
                </value>
                <value>
                    <fullName>Kelvin Lee</fullName>
                </value>
                <value>
                    <fullName>Sven Fleischer</fullName>
                </value>
                <value>
                    <fullName>Thura Lwin</fullName>
                </value>
                <value>
                    <fullName>Warinthanate Sucharitphongse (pichet)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Service_Serv__c</fullName>
        <label>SG Service: Serv#(Names, mm/dd/yy)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Training_Conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SG Training Conducted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Training_Details__c</fullName>
        <label>SG Training Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_sg_Type_Service__c</fullName>
        <label>SG Type Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALI &amp; CM Service</fullName>
                </value>
                <value>
                    <fullName>ALI Service</fullName>
                </value>
                <value>
                    <fullName>CM Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Type_Training__c</fullName>
        <label>SG Type Training</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CAT I</fullName>
                </value>
                <value>
                    <fullName>CAT II</fullName>
                </value>
                <value>
                    <fullName>CAT III</fullName>
                </value>
                <value>
                    <fullName>Certified</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>Software Training</fullName>
                </value>
                <value>
                    <fullName>Technical non certified</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Accounts_Payable__c</fullName>
        <label>US Accounts Payable</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>